<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eth.matteljay.mastermindy.MainActivity">
    <item
        android:id="@+id/action_reveal_secret"
        android:orderInCategory="100"
        android:title="@string/reveal_secret"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restart"
        android:orderInCategory="100"
        android:title="@string/action_restart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
         app:showAsAction="never" />
    <item
        android:id="@+id/action_save_exit"
        android:orderInCategory="100"
        android:title="@string/action_save_exit"
        app:showAsAction="never" />
</menu>
